--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container mt-4">
             
          <h4 class="text-center mt-4" style="color:gold">JUAL BELI MOTOR SECOND DAN BARU</h4>
-         <center><a href="https://asiatogel88.biz/link.php?member=asiato88";><img class="btn btn-danger btn-lg mt-4 d-flex justify-content-center align-items-center class="body-image" src="kepala.gif" style="width: 75%; height: auto;" alt="ijum"></center>
+         <center><a href="https://asiatogel88.biz/link.php?member=asiato88";><img class="btn btn-danger btn-lg mt-4 d-flex justify-content-center align-items-center class="body-image" src="ADS Promotion 280 x 500 11.png" style="width: 75%; height: auto;" alt="ijum"></center>
             <div class="row d-flex align-items-center justify-content-center mx-4">
                 <div class="col-md-4 mx-4">
                     <div class="mt-4 row align-items-center">
